test/spec_vectors/align64/ok/module_16.wat
(module (memory i64 0) (func (i32.store align=4 (i64.const 0) (i32.const 1))))