test/spec_vectors/align64/fail/module_105.wat
(module (memory i64 0) (func (f64.store align=16 (i64.const 0) (f64.const 0))))